adding in ngForce

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   ],
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-ui-router": "0.3.1"
+    "angular-ui-router": "0.3.1",
+    "restangular": "^1.5.2",
+    "d9c4190e11e6da2dcb9000a60f024497778fc472": "https://github.com/noeticpenguin/ngForce/commit/d9c4190e11e6da2dcb9000a60f024497778fc472"
   }
 }
