--- a/src/package.xml
+++ b/src/package.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>domng_resourceSwitch</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>domng_localResources</members>
-        <members>domng_serverResources</members>
-        <members>domngapp</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>domng_base</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>domng</members>
-        <name>StaticResource</name>
-    </types>
-    <version>35.0</version>
+	<types>
+		<members>domng_resourceSwitch</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>domng_localResources</members>
+		<members>domng_serverResources</members>
+		<members>domngapp</members>
+		<members>domngforce</members>
+		<name>ApexComponent</name>
+	</types>
+	<types>
+		<members>domng_base</members>
+		<members>domng_config</members>
+		<name>ApexPage</name>
+	</types>
+	<types>
+		<members>domng</members>
+		<name>StaticResource</name>
+	</types>
+	<version>35.0</version>
 </Package>
